25 Apr 2019:  Added Splines, Insert to DXF Parser
17 Apr 2019:  Fixed cut direction for Outside Cuts
25 Feb 2019:  Added OpenBuilds BlackBox 4X Profile
19 Feb 2019:  Fixed CNC Hello World file
04 Feb 2019:  Fixed Keyboard Binding Bug
28 Jan 2019:  Updated Licence AGPL3
21 Jan 2019:  Added comment with endmill diameter to GCODE Output
11 Jan 2019:  Added a "Disable Tool-Width Preview checkbox" to the Settings modal
10 Jan 2019:  Added more artwork to the Parts Library
09 Jan 2019:  Added more artwork to the Parts Library
09 Jan 2019:  Improved Toolpath Modal cosmetics and minor bugs
09 Jan 2019:  Added handling for Open vectors
09 Jan 2019:  Improved HelloWorld backend (Disable Caching, Updated JSON)
08 Jan 2019:  Fixed Load Workspace Input bug
08 Jan 2019:  Added HelloWorld Submenu and Laser specific Hello World
07 Jan 2019:  Updated profiles for Acro machines
04 Jan 2019:  Added View Checkboxes (bottom right corner of 3D viewer)
02 Jan 2019:  Enhanced toolpath error messages to be more descriptive
02 Jan 2019:  Fixed Firefox step=any bug for input=number
28 Dec 2018:  Fixed keybinding bug on Internal CAD modals
27 Dec 2018:  Fixed glitchy window bug
27 Dec 2018:  Added Changelog
27 Dec 2018:  Moved Merge Geometry form entry higher up on form
27 Dec 2018:  Fixed delete/backspace behavior on cam modal
27 Dec 2018:  Fixed transform hover-artifacts
27 Dec 2018:  Fixed MacOS Delete keybinding
20 Dec 2018:  Don't show Merge Geometry option on Raster Fill operations, invalid use case
10 Dec 2018:  Fixed bug with Laser Fill Gcode
05 Dec 2018:  New consolidated File menu for workspace, save, open, etc
03 Dec 2018:  New HelloWorld workspace as per demo video
28 Nov 2018:  Fixed Option/Ctrl keybinding for MacOS
26 Nov 2018:  Renamed references to host software as OpenBuilds CONTROL
26 Nov 2018:  Fix for handling empty operations
21 Nov 2018:  Update Leadmachine CAM profile
30 Oct 2018:  Update UI to have rows/columns resizable - Metro Splitter