@@ -318,6 +318,7 @@
 							<button class="button small dark outline bg-white drop-shadow" id="selectAll"><span class="far fa-check-square"></span> All</button>
 							<button class="button small dark outline bg-white drop-shadow" id="selectNone"><span class="far fa-square"></span> None</button>
 							<button class="button small dark outline bg-white drop-shadow" id="selectInv"><span class="fas fa-check"></span> Invert</button>
+							<button class="button small dark outline bg-white drop-shadow" id="selectDel"><span class="fas fa-trash"></span> Delete</button>
 						</div>
 						<div class="window-content p-1" style="overflow-y:scroll;">
 							<!-- Documents Here -->
